fixed a bug in getid() function and added addcustomer() in source code and included these functions in README. Also added a new code firsttimelaunc.c which will generate the necessary binary files if the programme is to be run for the first time in a device.

--- a/README
+++ b/README
@@ -91,6 +91,9 @@ Functions to be written
     input : none
     output : none
 
+- getid(): gets the id of the customer as stored in the database which is accessed weth the customercredentials (mobile number).
+
+
 - customermenu() : prints the menu to track customer activities and demands. Takes their response too.
     input : none
     output : response
