added function editcredential(), updated info in README, the functions printdatabase() and printhistory eill be provided in version 2 . compiled the programme and errors were removed

--- a/README
+++ b/README
@@ -111,5 +111,6 @@ Functions to be written
     output : none
 
 - editcredentials(int) : presents all the options for editing the credentials of the id.
+		(cannot edit mobile nuber(as it is an id for the customer and data may be lost by changing it)
     input : int
     output : none
